--- a/cs371/BirthdayCake-master/BirthdayCake-master/app/src/main/res/layout/activity_main.xml
+++ b/cs371/BirthdayCake-master/BirthdayCake-master/app/src/main/res/layout/activity_main.xml
@@ -33,6 +33,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1" />
+
     </LinearLayout>
 
     <LinearLayout
@@ -51,6 +52,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="yay..." />
+
+        <Switch
+            android:id="@+id/switch1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="0"
+            android:text="Frosting" />
 
     </LinearLayout>
 </LinearLayout>
